Fix edit labels spacing, use consistent page header class (#34350)

--- a/frontend/pages/ManageControlsPage/SetupExperience/cards/RunScript/_styles.scss
+++ b/frontend/pages/ManageControlsPage/SetupExperience/cards/RunScript/_styles.scss
@@ -5,7 +5,7 @@
     margin: 0;
   }
 
-  &__learn-how-link {
+  &__learn-how-link, &__learn-how-link:hover {
     margin-bottom: $pad-large;
   }
 
